[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["rzvxa <rzvxa@protonmail.com>"]
description = "Fuse Compiler"
categories = ["compilers"]
edition = "2021"
license = "MIT"
repository = "https://github.com/fuse-lang/fusec"

[workspace.dependencies]
fuse = { version = "0.0.0", path = "crates/fuse" }
fuse_ast = { version = "0.0.0", path = "crates/fuse-ast" }
fuse_codegen = { version = "0.0.0", path = "crates/fuse-codegen" }
fuse_common = { version = "0.0.0", path = "crates/fuse-common" }
fuse_common_proc = { version = "0.0.0", path = "crates/fuse-common-proc" }
fuse_ir = { version = "0.0.0", path = "crates/fuse-ir" }
fuse_parser = { version = "0.0.0", path = "crates/fuse-parser" }
fuse_resolve = { version = "0.0.0", path = "crates/fuse-resolve" }
fuse_semantic = { version = "0.0.0", path = "crates/fuse-semantic" }
fuse_visitor = { version = "0.0.0", path = "crates/fuse-visitor" }
fusec = { version = "0.0.0", path = "crates/fusec" }

thiserror = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
insta = { version = "1.34", features = ["ron"] }
