[package]
name = "fuse_ast"
version = "0.0.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = []
serde = ["serde/rc"]

[dependencies]
fuse_common = { workspace = true }
fuse_common_proc = { workspace = true }

serde = { workspace = true, optional = true}
