[package]
name = "fuse_inference"
version = "0.0.0"
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
fuse_ast = { workspace = true }
fuse_common = { workspace = true }
fuse_visitor = { workspace = true }
