[package]
name = "fuse_parser"
description = "The official parser for the Fuse programming language."
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
fuse_ast = { workspace = true }
fuse_common = { workspace = true }

paste = { workspace = true }
serde = { workspace = true }
