[package]
name = "fuse_parser"
description = "The official parser for the Fuse programming language."
version = "0.0.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "fuse_ast/serde", "fuse_common/serde"]

[dependencies]
fuse_ast = { workspace = true, optional = true }
fuse_common = { workspace = true, optional = true }
fuse_common_proc = { workspace = true }

serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
fuse_common = { workspace = true, features = ["serde"] }

serde = { workspace = true }
insta = { workspace = true }
