[package]
name = "fusec"
description = "The official compiler for the Fuse programming language."
version = "0.0.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
fuse_parser = { workspace = true }
fuse_semantic = { workspace = true }
